[gd_scene load_steps=25 format=3 uid="uid://dharp37746f5j"]

[ext_resource type="Script" uid="uid://73pkmj273qjj" path="res://scripts/puzzle_level_scene.gd" id="1_wvkbx"]
[ext_resource type="Theme" uid="uid://cbatwpb6ydnvr" path="res://assets/main_menu_theme.tres" id="3_ib56u"]
[ext_resource type="PackedScene" uid="uid://bx0u14bty8rqm" path="res://scenes/polyphonic_audio_player.tscn" id="4_qpt1g"]
[ext_resource type="Script" uid="uid://b0t3mmdcvowi7" path="res://scripts/classes/audio_library.gd" id="5_dagly"]
[ext_resource type="Script" uid="uid://cc0uc0xkw2lqg" path="res://scripts/puzzle_mode.gd" id="5_vvsg7"]
[ext_resource type="Script" uid="uid://cnaxqhjw0cjm5" path="res://scripts/sequencer.gd" id="6_e03pu"]
[ext_resource type="Script" uid="uid://xwsen5j60ci3" path="res://scripts/classes/sound_effect.gd" id="6_nq7dn"]
[ext_resource type="AudioStream" uid="uid://c7nbnrxreum11" path="res://assets/audio/samples/click/click-1.wav" id="7_68n2j"]
[ext_resource type="Script" uid="uid://kua02r6f4624" path="res://scripts/classes/ui/puzzle_mode_ui.gd" id="7_mvy5p"]
[ext_resource type="AudioStream" uid="uid://biorqjywcnn55" path="res://assets/audio/samples/click/click-2.wav" id="8_dwanr"]
[ext_resource type="Texture2D" uid="uid://do8ov7ffsws14" path="res://assets/rgb_gradient.tres" id="9_qpt1g"]
[ext_resource type="Resource" uid="uid://t65qpqebw0rg" path="res://assets/audio/samples/instr1/instr1_audio_library.tres" id="9_qv4qn"]
[ext_resource type="Script" uid="uid://hd1dahd1lpfr" path="res://scripts/classes/confetti_emitter.gd" id="10_dagly"]
[ext_resource type="Resource" uid="uid://be4sk7totaj65" path="res://assets/audio/samples/instr2/instr2_audio_library.tres" id="10_vjcl8"]
[ext_resource type="Resource" uid="uid://w1vaeb5vc4mo" path="res://assets/audio/samples/instr3/instr1_audio_library.tres" id="11_e03pu"]
[ext_resource type="PackedScene" uid="uid://duqnwl4lwb5fn" path="res://scenes/volume_slider.tscn" id="14_mvy5p"]
[ext_resource type="PackedScene" uid="uid://b1r084b8sxtdm" path="res://scenes/crt_effect.tscn" id="17_qpt1g"]

[sub_resource type="Resource" id="Resource_pi3p7"]
script = ExtResource("6_nq7dn")
tag = "click_1"
stream = ExtResource("7_68n2j")
metadata/_custom_type_script = "uid://xwsen5j60ci3"

[sub_resource type="Resource" id="Resource_xhx6y"]
script = ExtResource("6_nq7dn")
tag = "click_2"
stream = ExtResource("8_dwanr")
metadata/_custom_type_script = "uid://xwsen5j60ci3"

[sub_resource type="Resource" id="Resource_l1tmu"]
script = ExtResource("5_dagly")
sound_effects = Array[ExtResource("6_nq7dn")]([SubResource("Resource_pi3p7"), SubResource("Resource_xhx6y")])
metadata/_custom_type_script = "uid://b0t3mmdcvowi7"

[sub_resource type="CurveTexture" id="CurveTexture_ym1n0"]

[sub_resource type="Curve" id="Curve_kal5q"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_wvkbx"]
curve = SubResource("Curve_kal5q")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kal5q"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1000, 0, 0)
angle_min = -180.0
angle_max = 180.0
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 199.5
initial_velocity_max = 200.5
angular_velocity_min = 99.0
angular_velocity_max = 101.0
radial_velocity_min = -180.0
radial_velocity_max = 180.0
radial_velocity_curve = SubResource("CurveTexture_ym1n0")
gravity = Vector3(0, 500, 0)
scale_min = 3.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_wvkbx")
color_initial_ramp = ExtResource("9_qpt1g")

[node name="PuzzleLevel" type="Node2D"]
script = ExtResource("1_wvkbx")

[node name="PuzzleMode" type="Node" parent="."]
script = ExtResource("5_vvsg7")

[node name="PuzzleUI" type="Control" parent="."]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
theme = ExtResource("3_ib56u")
script = ExtResource("7_mvy5p")

[node name="ColorRect" type="ColorRect" parent="PuzzleUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0862745, 0.101961, 1)

[node name="VolumeSlider" parent="PuzzleUI" instance=ExtResource("14_mvy5p")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -246.0
offset_top = -39.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PuzzleUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelNameLabel" type="Label" parent="PuzzleUI/VBoxContainer"]
layout_mode = 2
text = "LevelName"

[node name="LevelDescriptionLabel" type="Label" parent="PuzzleUI/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.729773, 0.706156, 0.606451, 1)
theme_override_font_sizes/font_size = 24
text = "LevelDescription"

[node name="CurrentScoreLabel" type="Label" parent="PuzzleUI/VBoxContainer"]
layout_mode = 2
text = "Score: 0"

[node name="TotalScoreLabel" type="Label" parent="PuzzleUI/VBoxContainer"]
layout_mode = 2
text = "Total Score: 0"

[node name="ControlsContainer" type="VBoxContainer" parent="PuzzleUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ControlsHeaderLabel" type="Label" parent="PuzzleUI/VBoxContainer/ControlsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Controls
-------------"

[node name="HBoxContainer2" type="HBoxContainer" parent="PuzzleUI/VBoxContainer/ControlsContainer"]
layout_mode = 2

[node name="ControlsMoveCursorLabel" type="Label" parent="PuzzleUI/VBoxContainer/ControlsContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "< >"

[node name="ControlsMoveCursorLabel2" type="Label" parent="PuzzleUI/VBoxContainer/ControlsContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "(Move cursor)"

[node name="HBoxContainer" type="HBoxContainer" parent="PuzzleUI/VBoxContainer/ControlsContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="PuzzleUI/VBoxContainer/ControlsContainer/HBoxContainer"]
custom_minimum_size = Vector2(28.375, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="UpDownArrowsLabel" type="Label" parent="PuzzleUI/VBoxContainer/ControlsContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 28.425
offset_right = 1.0
offset_bottom = 29.425
grow_horizontal = 2
grow_vertical = 2
rotation = 4.71239
theme_override_font_sizes/font_size = 24
text = "< >"

[node name="ChangeNoteControlLabel" type="Label" parent="PuzzleUI/VBoxContainer/ControlsContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "(Change note)"

[node name="ControlsLabel" type="Label" parent="PuzzleUI/VBoxContainer/ControlsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "[A] (Replay goal pattern)
[S] (Stop)
[D] (Pause/Play)
[Z] (Toggle note)
[X] (Toggle click track)
[C] (Check goal pattern)
[Enter] (Next Level, on Win Screen)
[Esc] (Quit to Main Menu)"

[node name="Label" type="Label" parent="PuzzleUI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "[H] (Toggle Controls Menu)"

[node name="Sequencer" type="Node2D" parent="."]
script = ExtResource("6_e03pu")

[node name="click_PolyphonicAudioPlayer" parent="Sequencer" instance=ExtResource("4_qpt1g")]
volume_db = -5.0
audio_library = SubResource("Resource_l1tmu")

[node name="instr1_PolyphonicAudioPlayer" parent="Sequencer" instance=ExtResource("4_qpt1g")]
audio_library = ExtResource("9_qv4qn")

[node name="instr2_PolyphonicAudioPlayer" parent="Sequencer" instance=ExtResource("4_qpt1g")]
audio_library = ExtResource("10_vjcl8")

[node name="instr3_PolyphonicAudioPlayer" parent="Sequencer" instance=ExtResource("4_qpt1g")]
position = Vector2(1250.36, 180.44)
audio_library = ExtResource("11_e03pu")

[node name="WinOrLoseLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1003.0
offset_top = 572.0
offset_right = 1273.0
offset_bottom = 622.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(60.5, 11.5)
theme = ExtResource("3_ib56u")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "YOU WIN/LOSE!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfettiEmitter" type="GPUParticles2D" parent="."]
position = Vector2(564, 151)
emitting = false
amount = 500
lifetime = 2.0
explosiveness = 0.8
randomness = 1.0
fixed_fps = 12
process_material = SubResource("ParticleProcessMaterial_kal5q")
script = ExtResource("10_dagly")

[node name="CrtEffect" parent="." instance=ExtResource("17_qpt1g")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="level_state_request_change" from="PuzzleMode" to="." method="_on_puzzle_mode_level_state_request_change"]
